force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/Shop_Master__c.object-meta.xml
<CustomObject>
    <label>Shop Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>