force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>