force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/fields/Auth_Sector__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector__c</fullName>
    <label>Auth Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Polymers</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Stamping</fullName>
            </value>
            <value>
                <fullName>Equation</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>Castings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>