force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>