force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/fields/Program_Product__c.field-meta.xml
<CustomField>
    <fullName>Program_Product__c</fullName>
    <label>Program/Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Product_Index</valueSetName>
    </valueSet>
</CustomField>