force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Shop_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Shop__c</columns>
    <columns>Active__c</columns>
    <columns>Default_Program__c</columns>
    <columns>Program_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>